# mem0

./: .dockerignore  requirements.test.txt
mem0/memory/: memgraph_memory.py
memory-client/: README.md  pyproject.toml  work.md
memory-client/example/: basic_async.py  basic_sync.py
memory-client/memory_client/: __init__.py  main.py  project.py  setup.py  telemetry.py  utils.py
server/: .env.example  Dockerfile  README.md  dev.Dockerfile  docker-compose.dev.yml  docker-compose.yml  error.txt  main.py  requirements.txt
server/data_memory_qdrant/: raft_state.json
server/data_memory_qdrant/collections/memories/: config.json  payload_index.json
server/data_memory_qdrant/collections/memories/0/: newest_clocks.json  replica_state.json
server/data_memory_qdrant/collections/memories/0/segments/1abde946-83ae-4a9a-896c-70181764b373/payload_index/: IDENTITY  LOG  MANIFEST-000005  config.json
server/data_memory_qdrant/collections/memories/0/segments/1af5a3f4-11f0-49ae-9223-9b54f52aa01b/payload_index/: IDENTITY  LOG  MANIFEST-000005  config.json
server/data_memory_qdrant/collections/memories/0/segments/20fd9582-45b8-4a34-9f68-e2362dff1c06/payload_index/: IDENTITY  LOG  MANIFEST-000005  config.json
shim-mem0ai/: README.md  pyproject.toml
shim-mem0ai/mem0/: __init__.py
shim-mem0ai/mem0/client/: main.py
shim-mem0ai/mem0/memory/: main.py
tests/: README.md
tests/e2e/: conftest.py  test_endpoints.py  test_endpoints_individual.py  test_memory_client_integration.py
(+21 files in other folders)
