[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dagio-memory-client"
version = "0.0.1"
description = "Lightweight Python SDK client for Mem0 API (extracted)"
authors = [ { name = "Your Name", email = "you@example.com" } ]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
  "httpx>=0.25.0",
  "requests>=2.31.0",
  "pydantic>=2.7.3",
]

[tool.hatch.build]
include = [ "memory_client/**/*.py" ]

[tool.hatch.build.targets.wheel]
packages = ["memory_client"]
